<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.list.PostsActivity">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btnToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedButton="@+id/btnAllPosts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAllPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ALL" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFavoritesPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FAVORITES" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToggleGroup">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:indeterminate="true"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/post_row" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>