<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnAddToFav"
        android:icon="@drawable/ic_start_outline"
        android:title="@string/favorito"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/btnRemoveFromFav"
        android:icon="@drawable/ic_star_favorite"
        android:title="@string/favorito"
        android:visible="false"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/btnDeletePost"
        android:icon="@drawable/ic_delete_outline"
        android:title="@string/delete_post"
        app:showAsAction="never" />

</menu>