...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/postTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{post.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="Post Title"
                    />
...
